--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -3,8 +3,6 @@
 }
 
 .main {
-  min-height: 100vh;
-  padding: 4rem 0;
   flex: 1;
   display: flex;
   flex-direction: column;
@@ -112,5 +110,11 @@
   .grid {
     width: 100%;
     flex-direction: column;
+  }
+}
+
+@media only screen and (max-device-width: 1024px) {
+  .container {
+    padding: 0 0.5rem;
   }
 }
