--- a/components/LowerBanner/LowerBanner.module.css
+++ b/components/LowerBanner/LowerBanner.module.css
@@ -30,6 +30,8 @@
 
     .bannerContainer {
         padding-top: 0;
+        margin-top: 50px;
+        width: 90% !important;
     }
 
     .bannerImageMobile {
