created error and no result component

--- a/components/Layout/components/NavBar/components/Logo/Logo.module.css
+++ b/components/Layout/components/NavBar/components/Logo/Logo.module.css
@@ -1,5 +1,10 @@
 .desktop {
-    display: none !important
+    display: none !important;
+    cursor: pointer;
+}
+
+.mobile {
+    cursor: pointer;
 }
 
 @media only screen and (min-device-width: 1024px) {
