pointer cursosr and importants

--- a/components/Layout/components/NavBar/components/PromoteButton/PromoteButton.module.css
+++ b/components/Layout/components/NavBar/components/PromoteButton/PromoteButton.module.css
@@ -2,5 +2,5 @@
     color: white !important;
     text-transform: capitalize !important;
     border-color: white !important;
-    background-color: #505EB2;
+    background-color: #505EB2 !important;
 }
