added link to populars tokens

--- a/components/Shared/Error/Error.module.css
+++ b/components/Shared/Error/Error.module.css
@@ -25,3 +25,13 @@
 .icon {
     font-size: 4em;
 }
+
+
+@media only screen and (max-device-width: 1024px) {
+    .container {
+        margin-left: 5%;
+        padding: 4em 1em;
+        margin-right: 5%;
+        margin-top: 24px;
+    }
+}
