--- a/styles/Detail.module.css
+++ b/styles/Detail.module.css
@@ -1,17 +1,24 @@
 .container {
     display: flex;
     flex-flow: row;
-    padding: 4.3em 13.3em;
+
     justify-content: center;
     gap: 26px;
     color: white;
 }
 
-@media only screen and (max-device-width: 1024px) {
-.container {
-    margin-left: 5%;
-    padding: 4em 1em;
-    margin-right: 5%;
-    flex-flow: column;
+.padding {
+    padding: 4.3em 13.3em;
 }
+
+@media only screen and (max-device-width: 1024px) {
+    .container {
+        flex-flow: column;
+    }
+
+    .padding {
+        margin-left: 5%;
+        padding: 4em 1em;
+        margin-right: 5%;
+    }
 }
