--- a/components/Shared/LargeImage/LargeImage.module.css
+++ b/components/Shared/LargeImage/LargeImage.module.css
@@ -13,6 +13,8 @@
 
 .image {
     border-radius: 1em;
+    min-width: 400px;
+    min-height: 400px;
 }
 
 .imageCommon {
@@ -23,6 +25,12 @@
 @media only screen and (max-device-width: 1024px) {
     .container {
         height: 300px;
+    }
+
+    .image {
+        border-radius: 1em;
+        min-width: 300px;
+        min-height: 300px;
     }
 
 }
