--- a/styles/Promote.module.css
+++ b/styles/Promote.module.css
@@ -13,3 +13,13 @@
 .description {
     margin-top: 30px;
 }
+
+@media only screen and (max-device-width: 1024px) {
+    .container {
+        padding-left: 21px;
+        padding-right: 21px;
+    }
+}
+
+
+
