--- a/components/Populars/Populars.module.css
+++ b/components/Populars/Populars.module.css
@@ -33,3 +33,9 @@
     }
 
 }
+
+@media only screen and (max-width: 1400px) and (min-width: 768px) {
+    .populars {
+        padding: 2% 4%;
+    }
+}
