--- a/components/Suggestions/Suggestions.module.css
+++ b/components/Suggestions/Suggestions.module.css
@@ -93,3 +93,9 @@
 
 }
 
+@media only screen and (max-width: 1400px) and (min-width: 768px) {
+    .carousel {
+        width: 95%;
+        height: 390px;
+    }
+}
