--- a/styles/Detail.module.css
+++ b/styles/Detail.module.css
@@ -22,3 +22,11 @@
         margin-right: 5%;
     }
 }
+
+@media only screen and (max-width: 1500px) and (min-width: 768px) {
+    .padding {
+        margin-left: 2%;
+        padding: 3em 1em;
+        margin-right: 2%;
+    }
+}
