--- a/components/Layout/components/NavBar/components/Logo/Logo.module.css
+++ b/components/Layout/components/NavBar/components/Logo/Logo.module.css
@@ -7,12 +7,28 @@
     cursor: pointer;
 }
 
+.laptop {
+    display: none !important;
+}
+
 @media only screen and (min-device-width: 1024px) {
     .mobile {
         display: none !important;
     }
 
     .desktop {
+        display: block !important
+    }
+}
+
+
+@media only screen and (max-width: 1400px) and (min-width: 768px) {
+
+    .desktop {
+        display: none !important
+    }
+
+    .laptop {
         display: block !important
     }
 }
