--- a/components/LowerBanner/LowerBanner.module.css
+++ b/components/LowerBanner/LowerBanner.module.css
@@ -40,3 +40,9 @@
         max-width: 500px;
     }
 }
+
+@media only screen and (max-width: 1500px) and (min-width: 768px) {
+    .bannerContainer {
+        width: 95%;
+    }
+}
