--- a/components/Shared/Footer/Footer.module.css
+++ b/components/Shared/Footer/Footer.module.css
@@ -62,3 +62,9 @@
     }
 
 }
+
+@media only screen and (max-width: 1500px) and (min-width: 768px) {
+    .container {
+        padding: 30px 0px
+    }
+}
