--- a/components/Layout/components/Shared/DrawerMenu/DrawerMenu.module.css
+++ b/components/Layout/components/Shared/DrawerMenu/DrawerMenu.module.css
@@ -20,4 +20,10 @@
     display: flex;
     margin-top: 18px;
     flex-flow: column;
+    align-items: flex-start;
+}
+
+.selector {
+    margin-left: 22px;
+    margin-top: 10px;
 }
