modified default lang

--- a/components/Layout/components/Shared/DrawerMenu/DrawerButtons.module.css
+++ b/components/Layout/components/Shared/DrawerMenu/DrawerButtons.module.css
@@ -14,7 +14,6 @@
 }
 
 .languageSelector :global(fieldset) {
-    color: white !important;;
-    border-color: white !important;;
-
+    color: white !important;
+    border-color: white !important;
 }
