--- a/components/Layout/components/Shared/DrawerMenu/DrawerButtons.module.css
+++ b/components/Layout/components/Shared/DrawerMenu/DrawerButtons.module.css
@@ -4,7 +4,7 @@
     color: #E4E4E4  !important;
     text-transform: capitalize !important;
     width: 191px;
-    justify-content: left;
+    justify-content: flex-start;
 }
 
 .menuGrid {
