added more translations

--- a/components/Layout/components/Shared/DrawerMenu/DrawerMenu.module.css
+++ b/components/Layout/components/Shared/DrawerMenu/DrawerMenu.module.css
@@ -21,7 +21,7 @@
     margin-top: 18px;
     flex-flow: column;
     align-items: flex-start;
-    padding: 1em;
+    padding: 1em !important;
 }
 
 .selector {
