fixed navigation bug and more translations

--- a/components/SuggestedCarrousel/Suggestions.module.css
+++ b/components/SuggestedCarrousel/Suggestions.module.css
@@ -59,6 +59,7 @@
     display: flex;
     flex-flow: column;
     justify-content: space-between;
+    padding-bottom: 3em;
 }
 
 .slide :global(.carousel__inner-slide) {
