--- a/components/Shared/LargeImage/LargeImage.module.css
+++ b/components/Shared/LargeImage/LargeImage.module.css
@@ -20,6 +20,7 @@
 .imageCommon {
     border-radius: 1em;
     height: 20%;
+    width: 20%;
 }
 
 @media only screen and (max-device-width: 1024px) {
