fixed more styles

--- a/styles/Detail.module.css
+++ b/styles/Detail.module.css
@@ -7,7 +7,7 @@
 }
 
 .container :global(.card) {
-    background-color: transparent !important;
+    background-color: transparent ;
 }
 
 .padding {
