--- a/components/Shared/Banner/Banner.module.css
+++ b/components/Shared/Banner/Banner.module.css
@@ -2,7 +2,7 @@
     min-height: 283px;
     display: flex;
     justify-content: center;
-    box-shadow: none;
+    box-shadow: none !important;
     padding-top: 20px;
     width: 90%;
 }
