--- a/components/Shared/LargeImage/LargeImage.module.css
+++ b/components/Shared/LargeImage/LargeImage.module.css
@@ -7,7 +7,7 @@
     justify-content: center;
     align-items: center;
     height: 400px;
-    background-color: #16192C;
+    background-color: #16192C !important;
     border-radius: 1em;
 }
 
